--- a/index.html
+++ b/index.html
@@ -4,9 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecommerce</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+
+        <!-- First Section -->
+        <div class="logo">
+            <a href="#">Hablu Programmer</a>
+        </div>
+
+        <div class="searchArea">
+            <div class="searchbox">
+                <i class="fas fa-search"></i>
+                <input type="text" placeholder="search">
+            </div>
+        </div>
+
+
+
+        <div class="section1">
+            <img src="undraw_add_color_19gv.svg" alt="">
+        </div>
+
+        <div class="sectionButton">
+            <h1>SU <span class="color">MM</span> ER <h1>
+                <h2>COLLECT<span class="color">ION</span></h2>
+                <button class="btn">Details</button>
+        </div>
+
+
+
+        <div class="iconArea">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+        </div>
+    </div>
 </body>
 </html>
